2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Wim Taymans

	* com/fluendo/player/Cortado.java:
	* com/fluendo/player/Status.java:
	  Replace getWidth and getHeight with getSize (1.1)